ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
  annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: todo-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-app-service
            port:
              number: 3500
